converted to Test::Fatal

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for MooseX-AlwaysCoerce
 {{NEXT}
     - fixed class attribute and parameterized role TODO tests to work again
       with the latest MooseX::Role::Parameterized (Karen Etheridge)
+    - converted tests to Test::Fatal (Karen Etheridge)
 
 0.12  2010-10-08 12:14:54 PDT
     - ...and again.
