--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - conversion to Dist::Zilla
 
 0.16 2011-03-16
     - bump minimum required Package::Stash and namespace::autoclean versions
