--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - added missing prerequisite declaration
 
 0.17      2012-06-01 17:52:39 UTC+0000
     - conversion to Dist::Zilla
