--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
     - fixed reference to writable git repository
     - pod coverage tests added
+    - warnings tests bypassed during installation
 
 0.18      2012-10-13 16:57:07 PDT-0700 (Karen Etheridge)
     - added missing prerequisite declaration
