--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
     - warnings tests bypassed during installation
+    - repository has moved to the GitHub Moose organization
 
 0.18      2012-10-13 16:57:07 PDT-0700 (Karen Etheridge)
     - added missing prerequisite declaration
